--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section class="hero">
       <div class="hero-container">
         <h1 class="text-slanted">rest, relax, unwind</h1>
-        <h3>Embrace your choices - we do..</h3>
+        <h3>Vladislav Steb Shop - I do...</h3>
         <a href="./products.html" class="hero-btn">shop now</a>
       </div>
     </section>
